--- a/styles.css
+++ b/styles.css
@@ -325,21 +325,35 @@ h2.section-title {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-top: 12px;
 }
-article.recent-additions-carousel {
-    padding-top: 10px;
-    /* margin-top: -50px; */
+
+.recent-additions-carousel {
+    padding: 20px 0;
+    position: relative;
 }
 
 .recent-additions-image {
     width: 300px;
-    margin-right: 20px;
+    margin-right: 50px;
+    position: relative;
 }
 
 .recent-additions-image img {
     width: 100%;
-    aspect-ratio: 4/3; 
+    aspect-ratio: 4/3;
     object-fit: cover;
     display: block;
+}
+
+.recent-additions-image figcaption {
+    position: absolute;
+    bottom: -60px;
+    left: 0;
+    width: 100%;
+    background: transparent;
+    color: rgb(107, 107, 107);
+    padding: 10px;
+    z-index: 100;
+    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .logo {
@@ -348,4 +362,22 @@ article.recent-additions-carousel {
     height: 45px;
     width: 200px;
     background: transparent;  /* Remove any background color */
+}
+
+.flickity-slider {
+    min-height: 100px;
+}
+
+.flickity-viewport {
+    overflow: visible !important;
+}
+
+/* Target specifically the recent additions carousel */
+.recent-additions .flickity-viewport {
+    overflow: visible !important;
+    padding-bottom: 100px;  /* Add space for captions */
+}
+
+.recent-additions .flickity-slider {
+    min-height: 500px;  /* Increase height */
 }
