--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ section.hero {
     display: none;
     -webkit-tap-highlight-color: transparent;
     user-select: none;
+    /* z-index: 1000; */
     font-size: 12px;
     font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
     color: rgb(107, 107, 107);
