remove unused classes and, add seating category photo, and add grasshopper chaise to archive

--- a/styles.css
+++ b/styles.css
@@ -250,8 +250,7 @@ h2.section-title {
 }
 
 .recent-additions-image {
-    width: 300px;
-    margin-right: 50px;
+    width: 72.5%;
     position: relative;
 }
 
@@ -265,14 +264,21 @@ h2.section-title {
 
 .recent-additions-image figcaption {
     position: absolute;
-    bottom: -60px;
+    /* bottom: -60px; */
     left: 0;
     width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    text-rendering: optimizeLegibility;
     background: none;
     color: #6b6b6b;
-    padding: 10px;
+    padding-top: 15px;
     z-index: 100;
-    font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Gill Sans Nova, sans-serif;
+}
+
+.no-uppercase {
+    text-transform: none;
 }
 
 .logo {
@@ -299,7 +305,7 @@ h2.section-title {
 }
 
 .categories {
-    margin-top: -70px;
+    margin-top: 0px
 }
 
 .categories article {
